# Minesweeper

./: .gitignore  CMakeLists.txt  Makefile  minesweeper.c  ms
src/: main.c  minesweeper.c  minesweeper.h
tests/: e2e.c  integration.c  unit.c
